--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ MONGODB_URL = mongodb://localhost:27017/NextJS-Auth
 JWT_SECRET = "umarziaii"
 FRONTEND_URL = "http://localhost:3000"
 
-NODEMAILER_USER = b4b1584e37c7e6
-NODEMAILER_PASS = 8dcfcc51e5ad4d
+NODEMAILER_USER = "b4b1584e37c7e6"
+NODEMAILER_PASS = "8dcfcc51e5ad4d"
